refactor (cont).